[metadata]
name = Flask-Responses
version = 0.1.2
author = 'Ryan Rickgauer'
author_email = 'rrickgauer1@gmail.com'
project_urls =
    Documentation = https://github.com/rrickgauer/Flask-Responses
    Source Code = https://github.com/rrickgauer/Flask-Responses
    Issue Tracker = https://github.com/rrickgauer/Flask-Responses/issues

[options]
package_dir=
    =flask_responses
packages=find:
install_requires =
    Flask==2.0.1

[options.packages.find]
where=src