[metadata]
name = Flask-Responses
version = 0.1.2
author = 'Ryan Rickgauer'
author_email = 'rrickgauer1@gmail.com'
project_urls =
    Documentation = https://github.com/rrickgauer/Flask-Responses
    Source Code = https://github.com/rrickgauer/Flask-Responses
    Issue Tracker = https://github.com/rrickgauer/Flask-Responses/issues

[options]
packages = find:
package_dir = = src
install_requires =
    Flask==2.0.1

[options.packages.find]
where=src